[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shayntech-timetravel"
version = "0.1.0"
description = "Git for your database. SOC 2 compliance built in."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Shayntech", email = "hello@shayntech.com" },
]
dependencies = []

[project.urls]
Homepage = "https://shayntech.com"
Source = "https://github.com/zarrarerror/shayntech-timetravel"

[project.scripts]
timetravel = "shayntech_timetravel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
