[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "shayntech-timetravel-enterprise"
version = "0.1.0"
description = "Enterprise dashboard for Shayntech TimeTravel — Web UI, PDF reports, PostgreSQL support"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.10"
authors = [
    { name = "Shayntech", email = "hello@shayntech.com" },
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "jinja2>=3.0",
    "shayntech-timetravel>=0.1.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.0",
    "python-multipart>=0.0.5",
]

[project.urls]
Homepage = "https://shayntech.com"
